# SCALAR

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  claude.py  env.example  environment.yml  inference.py  main.py  openenv.yaml  pyproject.toml  requirements.txt  sast_check.sh  setup.sh  temp.txt  uv.lock.instructions.txt
.claude/rules/: progress-enforcement.md
.claude/skills/: README.md
_context/: claude.md  debug_handoff.md  gemini.md  progress.md  security_audit_handoff.md
app/: main.py
app/environment/: episode_loader.py
baseline/: run_baseline.py
configs/: config.yaml
data/tasks/: task3_episodes.json
server/: __init__.py  app.py
tests/: conftest.py
